--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,8 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "knex": "^2.2.0",
     "nestjs-knex": "^2.0.0",
     "pg": "^8.7.3",
